--- a/HikersGuide/HikersGuide/contact.html
+++ b/HikersGuide/HikersGuide/contact.html
@@ -2,6 +2,7 @@
 <html>
 	<link rel="stylesheet" href="css/main.css">
 <header>
+	<title>Contact Us</title>
 	<h1>Contact Us</h1>
 	<article style="float:right;">
 	<button>Home</button>
@@ -31,25 +32,25 @@
 <footer>
 	<article style="width:400px; float:left;">
 	<h4>Upcoming Events</h4>
-	<p>
+	
 		<ul>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 		</ul>
-	</p>
+
 	</article>
 	<article style="width:400px; float:left;">
 	<h4>New Hikers</h4>
-	<p>
+	
 		<ul>
 			<li>name</li>
 			<li>name</li>
 			<li>name</li>
 			<li>name</li>
 		</ul>
-	</p>
+	
 	</article >
 	<article style="width:400px; float:right;">
 	<h4>About us</h4>
