--- a/HikersGuide/HikersGuide/events.html
+++ b/HikersGuide/HikersGuide/events.html
@@ -2,6 +2,7 @@
 <html>
 	<link rel="stylesheet" href="css/main.css">
 <header>
+	<title>Events</title>
 	<h1>Events</h1>
 	<h5>What we are doing </h5>
 	<article style="float:right;">
@@ -12,16 +13,19 @@
 </header>
 <body>
 	<article>
+		<img src="images/hikers1001.jpg" style="width:200px;height:200px;">
 		<h3>Event Name</h3>
 		<h6>Date</h6>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
+		<img src="images/hikers1004.jpg" style="width:200px;height:200px;">
 		<h3>Event Name</h3>
 		<h6>Date</h6>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
+		<img src="images/hikers1002.jpg" style="width:200px;height:200px;">
 		<h3>Event Name</h3>
 		<h6>Date</h6>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
@@ -30,26 +34,27 @@
 <footer>
 	<article style="width:400px; float:left;">
 	<h4>Upcoming Events</h4>
-	<p>
+	
 		<ul>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 		</ul>
-	</p>
+	
 	</article>
 	<article style="width:400px; float:left;">
 	<h4>New Hikers</h4>
-	<p>
+	
 		<ul>
 			<li>name</li>
 			<li>name</li>
 			<li>name</li>
 			<li>name</li>
 		</ul>
-	</p>
+	
 	</article >
+	
 	<article style="width:400px; float:right;">
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
