removed second folder
removed second hikesGuide folder
put footers and headers in body

--- a/HikersGuide/events.html
+++ b/HikersGuide/events.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en-US">
 	<link rel="stylesheet" href="css/main.css">
-<header>
-	<title>Events</title>
+<head><title>Events</title></head>
+<body>
+	<header>
+	<script src="js/content.js"></script>
+	
 	<h1>Events</h1>
 	<h5>What we are doing </h5>
 	<article style="float:right;">
@@ -11,7 +14,7 @@
 	<button onclick="contact.html">Contact</button>
 	</article>
 </header>
-<body>
+	<section id="events">
 	<article>
 		<img src="images/hikers1001.jpg" style="width:200px;height:200px;">
 		<h3>Event Name</h3>
@@ -30,8 +33,9 @@
 		<h6>Date</h6>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
-</body>
-<footer>
+		</section>
+	<footer>
+	<section id="foot">
 	<article style="width:400px; float:left;">
 	<h4>Upcoming Events</h4>
 	
@@ -59,5 +63,9 @@
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
 		</article>
+		</section>
 </footer>
+</body>
+
+	
 </html>
