--- a/HikersGuide/blog.html
+++ b/HikersGuide/blog.html
@@ -1,35 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang = "en-US">
 	<link rel="stylesheet" href="css/main.css">
-<header>
-	<title>Contact Us</title>
-	<h1>Contact Us</h1>
+<head><title>Blog</title></head>
+<body>
+	<header>
+	<script src="js/content.js"></script>
+	
+	<h1>Blog</h1>
 	<article style="float:right;">
 	<button>Home</button>
-	<button onclick="blog.html">Blog</button>
 	<button onclick="events.html">Events</button>
+	<button onclick="contact.html">Contact</button>
 	</article>
 </header>
-<body>
-	<form method="post" action="">
-		<p>
-			<label for="name">Name</label>
-				<input type="text" name="name" id="name" class="required" placeholder="Name" />
-		</p>
-		<p>
-			<label for="email">Email Address</label>
-				<input type="text" name="email" id="email" class="required" placeholder="Email Address" />
-		</p>
-		<p>
-			<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
-		</p>
-		<p>
-				<button type="submit">Submit</button>
-		</p>
-	</form>
-</body>
-<footer>
+	<section id="blog">
+	<article>
+		<h3>Blog Post</h3>
+		<h6>Date</h6>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
+	</article>
+	<article>
+		<h3>Blog Post</h3>
+		<h6>Date</h6>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
+	</article>
+	<article>
+		<h3>Blog Post</h3>
+		<h6>Date</h6>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
+	</article>
+		</section>
+	<footer>
+	<section id="foot">
 	<article style="width:400px; float:left;">
 	<h4>Upcoming Events</h4>
 	
@@ -39,7 +41,7 @@
 			<li>event</li>
 			<li>event</li>
 		</ul>
-
+	
 	</article>
 	<article style="width:400px; float:left;">
 	<h4>New Hikers</h4>
@@ -56,5 +58,9 @@
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
 		</article>
+		</section>
 </footer>
+</body>
+
+	
 </html>
