Styles and links
removed inline styles in html
replaced onclick buttons with "a href"

--- a/HikersGuide/contact.html
+++ b/HikersGuide/contact.html
@@ -7,10 +7,10 @@
 	<script src="js/content.js"></script>
 	
 	<h1>Contact Us</h1>
-	<article style="float:right;">
+	<article >
 	<button>Home</button>
-	<button onclick="blog.html">Blog</button>
-	<button onclick="events.html">Events</button>
+	<a href="blog.html">Blog</a>
+	<a href onclick="events.html">Events</a>
 	</article>
 </header>
 	<section id="form">
@@ -34,7 +34,7 @@
 		</section>
 	<footer>
 	<section id="foot">
-	<article style="width:400px; float:left;">
+	<article >
 	<h4>Upcoming Events</h4>
 	
 		<ul>
@@ -45,7 +45,7 @@
 		</ul>
 
 	</article>
-	<article style="width:400px; float:left;">
+	<article >
 	<h4>New Hikers</h4>
 	
 		<ul>
@@ -56,7 +56,7 @@
 		</ul>
 	
 	</article >
-	<article style="width:400px; float:right;">
+	<article >
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
 		</article>
