--- a/HikersGuide/blog.html
+++ b/HikersGuide/blog.html
@@ -7,32 +7,32 @@
 	<script src="js/content.js"></script>
 	
 	<h1>Blog</h1>
-	<article style="float:right;">
+	<article >
 	<button>Home</button>
-	<button onclick="events.html">Events</button>
-	<button onclick="contact.html">Contact</button>
+	<a href ="events.html">Events</a>
+	<a href="contact.html">Contact</a>
 	</article>
 </header>
 	<section id="blog">
 	<article>
-		<h3>Blog Post</h3>
-		<h6>Date</h6>
+		<h2>Blog Post</h2>
+		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
-		<h3>Blog Post</h3>
-		<h6>Date</h6>
+		<h2>Blog Post</h2>
+		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
-		<h3>Blog Post</h3>
-		<h6>Date</h6>
+		<h2>Blog Post</h2>
+		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 		</section>
 	<footer>
 	<section id="foot">
-	<article style="width:400px; float:left;">
+	<article >
 	<h4>Upcoming Events</h4>
 	
 		<ul>
@@ -43,7 +43,7 @@
 		</ul>
 	
 	</article>
-	<article style="width:400px; float:left;">
+	<article >
 	<h4>New Hikers</h4>
 	
 		<ul>
@@ -54,7 +54,7 @@
 		</ul>
 	
 	</article >
-	<article style="width:400px; float:right;">
+	<article >
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
 		</article>
