Added validation proof

--- a/HikersGuide/blog.html
+++ b/HikersGuide/blog.html
@@ -33,6 +33,7 @@
 	<footer>
 	<section id="foot">
 	<article >
+		<section id = "eventList">
 	<h4>Upcoming Events</h4>
 	
 		<ul>
@@ -41,9 +42,10 @@
 			<li>event</li>
 			<li>event</li>
 		</ul>
-	
+	</section>
 	</article>
 	<article >
+		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
 		<ul>
@@ -52,7 +54,7 @@
 			<li>name</li>
 			<li>name</li>
 		</ul>
-	
+	</section>
 	</article >
 	<article >
 	<h4>About us</h4>
