--- a/HikersGuide/contact.html
+++ b/HikersGuide/contact.html
@@ -36,16 +36,17 @@
 	<section id="foot">
 	<article >
 	<h4>Upcoming Events</h4>
-	
+	<section id = "eventList">
 		<ul>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 		</ul>
-
+		</section>
 	</article>
 	<article >
+		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
 		<ul>
@@ -54,7 +55,7 @@
 			<li>name</li>
 			<li>name</li>
 		</ul>
-	
+		</section>
 	</article >
 	<article >
 	<h4>About us</h4>
