--- a/HikersGuide/events.html
+++ b/HikersGuide/events.html
@@ -38,16 +38,17 @@
 	<section id="foot">
 	<article >
 	<h4>Upcoming Events</h4>
-	
+	<section id = "eventList">
 		<ul>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 			<li>event</li>
 		</ul>
-	
+		</section>
 	</article>
 	<article>
+		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
 		<ul>
@@ -56,7 +57,7 @@
 			<li>name</li>
 			<li>name</li>
 		</ul>
-	
+		</section>
 	</article >
 	
 	<article >
