Updated via feedback

--- a/HikersGuide/blog.html
+++ b/HikersGuide/blog.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-	<link rel="stylesheet" href="css/main.css">
-<head><title>Blog</title></head>
+	
+<head><title>Blog</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="css/main.css"></head>
 <body>
 	<header>
 	<script src="js/content.js"></script>
-	
-	<h1>Blog</h1>
-	<article >
-	<button>Home</button>
+	<a href="index.html">Home</a>
 	<a href ="events.html">Events</a>
 	<a href="contact.html">Contact</a>
-	</article>
+	<a href="https://www.facebook.com/">See us on Facebook!</a>
 </header>
 	<section id="blog">
+		<h1>Blog</h1>
 	<article>
 		<h2>Blog Post</h2>
 		<h3>Date</h3>
@@ -32,7 +32,7 @@
 		</section>
 	<footer>
 	<section id="foot">
-	<article >
+	<h2>Check this stuff out!</h2>
 		<section id = "eventList">
 	<h4>Upcoming Events</h4>
 	
@@ -43,8 +43,8 @@
 			<li>event</li>
 		</ul>
 	</section>
-	</article>
-	<article >
+	
+	
 		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
@@ -55,11 +55,11 @@
 			<li>name</li>
 		</ul>
 	</section>
-	</article >
-	<article >
+	
+	
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
-		</article>
+		
 		</section>
 </footer>
 </body>
