--- a/HikersGuide/events.html
+++ b/HikersGuide/events.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-	<link rel="stylesheet" href="css/main.css">
-<head><title>Events</title></head>
+	
+<head><title>Events</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="css/main.css"></head>
 <body>
 	<header>
 	<script src="js/content.js"></script>
-	
-	<h1>Events</h1>
-	<h2>What we are doing </h2>
-	<article >
-	<button>Home</button>
+	<a href="index.html">Home</a>
 	<a href="blog.html">Blog</a>
 	<a href="contact.html">Contact</a>
-	</article>
+	<a href="https://www.facebook.com/">See us on Facebook!</a>
+	
 </header>
 	<section id="events">
+		<h1>Events</h1>
+	<h2>What we are doing </h2>
 	<article>
-		<img src="images/hikers1001.jpg" >
+		<img src="images/hikers1001.jpg" alt="hikers1001">
 		<h2>Event Name</h2>
 		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
-		<img src="images/hikers1004.jpg" >
+		<img src="images/hikers1004.jpg" alt="hikers1004" >
 		<h2>Event Name</h2>
 		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
-		<img src="images/hikers1002.jpg" >
+		<img src="images/hikers1002.jpg" alt="hikers1002" >
 		<h2>Event Name</h2>
 		<h3>Date</h3>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
@@ -36,9 +37,10 @@
 		</section>
 	<footer>
 	<section id="foot">
-	<article >
-	<h4>Upcoming Events</h4>
+	
+	<h2>Check this stuff out!</h2>
 	<section id = "eventList">
+		<h4>Upcoming Events</h4>
 		<ul>
 			<li>event</li>
 			<li>event</li>
@@ -46,8 +48,7 @@
 			<li>event</li>
 		</ul>
 		</section>
-	</article>
-	<article>
+	
 		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
@@ -58,13 +59,10 @@
 			<li>name</li>
 		</ul>
 		</section>
-	</article >
 	
-	<article >
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
-		</article>
-		</section>
+		</section>	
 </footer>
 </body>
 
