--- a/HikersGuide/contact.html
+++ b/HikersGuide/contact.html
@@ -1,23 +1,29 @@
 <!DOCTYPE html>
 <html lang = "en-US">
-	<link rel="stylesheet" href="css/main.css">
-<head><title>Contact Us</title></head>
+	
+<head><title>Contact Us</title>
+	<meta charset="utf-8"/>
+	<link rel="stylesheet" href="css/main.css"></head>
 <body>
 	<header>
 	<script src="js/content.js"></script>
-	
-	<h1>Contact Us</h1>
-	<article >
-	<button>Home</button>
+	<a href="index.html">Home</a>
 	<a href="blog.html">Blog</a>
-	<a href onclick="events.html">Events</a>
-	</article>
+	<a href="events.html">Events</a>
+	<a href="https://www.facebook.com/">See us on Facebook!</a>
 </header>
 	<section id="form">
-	<form method="post" action="">
+		<h1>Contact Us</h1>
+	<form method="post">
 		<p>
 			<label for="name">Name</label>
 				<input type="text" name="name" id="name" class="required" placeholder="Name" />
+		</p>
+		<p>
+			
+			<input type="radio" name="sex" value="male">Male<br>
+			<input type="radio" name="sex" value="female">Female<br>
+			<input type="radio" name="sex" value="other">Other
 		</p>
 		<p>
 			<label for="email">Email Address</label>
@@ -34,9 +40,10 @@
 		</section>
 	<footer>
 	<section id="foot">
-	<article >
-	<h4>Upcoming Events</h4>
+	<h2>Check this stuff out!</h2>
+	
 	<section id = "eventList">
+		<h4>Upcoming Events</h4>
 		<ul>
 			<li>event</li>
 			<li>event</li>
@@ -44,8 +51,7 @@
 			<li>event</li>
 		</ul>
 		</section>
-	</article>
-	<article >
+	
 		<section id = "hikerList">
 	<h4>New Hikers</h4>
 	
@@ -56,11 +62,10 @@
 			<li>name</li>
 		</ul>
 		</section>
-	</article >
-	<article >
+	
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
-		</article>
+		
 		</section>
 </footer>
 </body>
