Updated based on feedback from goTo meeting

--- a/HikersGuide/events.html
+++ b/HikersGuide/events.html
@@ -3,42 +3,50 @@
 	
 <head><title>Events</title>
 	<meta charset="utf-8"/>
-	<link rel="stylesheet" href="css/main.css"></head>
+	<link rel="stylesheet" href="css/main.css">
+	<script src="js/content.js"></script>
+	</head>
 <body>
 	<header>
-	<script src="js/content.js"></script>
-	<a href="index.html">Home</a>
-	<a href="blog.html">Blog</a>
-	<a href="contact.html">Contact</a>
-	<a href="https://www.facebook.com/">See us on Facebook!</a>
-	
+			<h1>
+	<img src="images/hikersGuide.png" alt="Hikers Guide Logo">
+		</h1>
+	<nav>
+		<ul>
+	<li><a href="index.html">Home</a></li>
+	<li><a href="blog.html">Blog</a></li>
+	<li><a href ="events.html">Events</a></li>
+	<li><a href="contact.html">Contact</a></li>
+		</ul>
+	</nav>
 </header>
+
 	<section id="events">
-		<h1>Events</h1>
-	<h2>What we are doing </h2>
+		<h2>Events</h2>
+	
 	<article>
 		<img src="images/hikers1001.jpg" alt="hikers1001">
-		<h2>Event Name</h2>
-		<h3>Date</h3>
+		<h3>Event Name</h3>
+		<h4>Date</h4>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
 		<img src="images/hikers1004.jpg" alt="hikers1004" >
-		<h2>Event Name</h2>
-		<h3>Date</h3>
+		<h3>Event Name</h3>
+		<h4>Date</h4>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 	<article>
 		<img src="images/hikers1002.jpg" alt="hikers1002" >
-		<h2>Event Name</h2>
-		<h3>Date</h3>
+		<h3>Event Name</h3>
+		<h4>Date</h4>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
 		</section>
 	<footer>
 	<section id="foot">
 	
-	<h2>Check this stuff out!</h2>
+	<h2>Join the Adventure</h2>
 	<section id = "eventList">
 		<h4>Upcoming Events</h4>
 		<ul>
@@ -62,6 +70,12 @@
 	
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
+		
+			<ul>
+	<li><a href="https://www.facebook.com/">Facebook</a></li>
+	<li><a href="https://twitter.com/?lang=en">Twitter</a></li>
+	<li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
+		</ul>
 		</section>	
 </footer>
 </body>
