finished css and validation

--- a/HikersGuide/contact.html
+++ b/HikersGuide/contact.html
@@ -50,7 +50,9 @@
 		</section>
 	<footer>
 	<section id="foot">
+	<section id="join">
 	<h2>Join the Adventure</h2>
+		</section>
 	
 	<section id = "eventList">
 		<h4>Upcoming Events</h4>
@@ -66,21 +68,24 @@
 	<h4>New Hikers</h4>
 	
 		<ul>
-			<li>name</li>
-			<li>name</li>
-			<li>name</li>
-			<li>name</li>
+			<li><img src="images/user.png" alt="user">name</li>
+			<li><img src="images/user.png" alt="user">name</li>
+			<li><img src="images/user.png" alt="user">name</li>
+			<li><img src="images/user.png" alt="user">name</li>
 		</ul>
 		</section>
+		<section id="about">
 	
 	<h4>About us</h4>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et. Morbi nibh nisi, mattis rhoncus aliquam quis, fringilla nec ex. Proin non tortor mauris. Curabitur eget laoreet urna. Suspendisse placerat aliquam felis, at interdum ante ullamcorper ac. Fusce sed augue eget nisl consequat euismod vel non purus. Nam ut lacus pellentesque, placerat nunc a, sodales nibh. Curabitur eu convallis sem. Curabitur ut arcu varius, facilisis tellus eget, tristique orci. Aenean ipsum quam, viverra eu rhoncus quis, maximus vel risus.</p>
-		
+		</section>
+		<section id="smedia">
 			<ul>
-	<li><a href="https://www.facebook.com/">Facebook</a></li>
-	<li><a href="https://twitter.com/?lang=en">Twitter</a></li>
-	<li><a href="https://www.instagram.com/?hl=en">Instagram</a></li>
+	<li><a href="https://www.facebook.com/"><img src="images/facebook.png" alt="facebook"></a></li>
+	<li><a href="https://twitter.com/?lang=en"><img src="images/twitter.png" alt="twitter"></a></li>
+	<li><a href="https://www.instagram.com/?hl=en"><img src="images/instagram.png" alt="instagram"></a></li>
 		</ul>
+		</section>
 		</section>
 </footer>
 </body>
