Started to add json events

--- a/HikersGuide/blog.html
+++ b/HikersGuide/blog.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/content.js"></script>
+	<script src="js/events.js"></script>
 	</head>
 <body>
 	<header>
@@ -38,6 +39,8 @@
 		<h4>Date</h4>
 		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam et varius sapien. Maecenas iaculis lectus in semper lacinia. Cras sodales elementum mi, a pellentesque est rutrum et.</p>
 	</article>
+		
+		<button type="submit" id="pageChange">Next</button>
 
 		</section>
 	<footer>
