--- a/HikersGuide/events.html
+++ b/HikersGuide/events.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/content.js"></script>
+	<script src="js/events.js"></script>
 	</head>
 <body>
 	<header>
