--- a/HikersGuide/contact.html
+++ b/HikersGuide/contact.html
@@ -6,6 +6,7 @@
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/content.js"></script>
+	<script src="js/events.js"></script>
 	</head>
 <body>
 	<header>
@@ -44,7 +45,7 @@
 				<textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
 		</p>
 		<p>
-				<button type="submit">Submit</button>
+				<button type="submit" id="submit">Submit</button>
 		</p>
 	</form>
 		</section>
