--- a/BikeShop/contact.html
+++ b/BikeShop/contact.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
 <html lang = "en-US">
 	
-<head><title>Home</title>
+<head>
+	<title>Contact</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/content.js"></script>
-	</head>
+</head>
 <body>
+	<header>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
+				<li><a href ="club events.html">Club Events</a></li>
+				<li><a href="contact.html">Contact</a></li>
+			</ul>
+		</nav>
+		<h1>
+			<img src="images/banner.jpg" alt="guy in red on bike">
+			<img src="images/cycleWorld.png" alt="logo">
+		</h1>
+	</header>
 	
 </body>
 
