--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -22,6 +22,142 @@
 			<img src="images/cycleWorld.png" alt="logo">
 		</h1>
 	</header>
+		
+	<section id="homeNav">
+		<h2>Bikes <img src="images/bikes.jpg" alt="BW bike"></h2>
+		<h2>Accessories<img src="images/speedometer.jpg" alt="speedometer"></h2>
+		<h2>Apparel<img src="images/backpack.jpg" alt="backpack"></h2>
+	</section>
+	
+	<section id="featured">
+		<h2>Shop</h2>
+		<h2>Featured Products</h2>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Product</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Price</p>
+		</article>
+	</section>
+	
+	<section id="memberBenefits">
+		<h3>Cycle Club</h3>
+		<h3>Member Benefits</h3>
+		<article>
+			<img src="images/truck.png" alt="truck">
+			<h4>Free Shipping</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+		</article>
+		<article>
+			<img src="images/wrench.png" alt="wrench">
+			<h4>In-Store Tune Ups</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
+		</article>
+		<article>
+			<img src="images/envelope.png" alt="envelope">
+			<h4>Newsletter</h4>
+	
+		</article>
+		
+	</section>
+	<footer>
+		<section id="footerOther">
+			<ul>
+				<li>Gift Cards</li>
+				<li>Find a Store</li>
+				<li>Sign up for Email</li>
+				<li>Become a Member</li>
+			</ul>
+		</section>
+		<section id="getHelp">
+			<ul>
+				<li>Get Help</li>
+				<li>Shipping and Delivery</li>
+				<li>Returns</li>
+				<li>Payment Options</li>
+				<li>Contact Us</li>
+			</ul>
+		</section>
+		<section id="news">
+			<ul>
+				<li>News</li>
+				<li>About Cycleworld</li>
+				<li>Careers</li>
+				<li>Gearup Culture &amp; Careers</li>
+				<li>Investors</li>
+				<li>Substainable Innovation</li>
+				<li>CA Supply Chains Act</li>
+				<li>Contact Us</li>
+			</ul>
+		</section>
+		<section id="social">
+			<ul>
+				<li><a href="https://www.facebook.com/">Facebook</a></li>
+				<li><a href="https://www.twitter.com/">Twitter</a></li>
+				<li><a href="https://www.youtube.com/">YouTube</a></li>
+				<li><a href="https://www.instagram.com/">Instagram</a></li>
+			</ul>
+		</section>
+		<section id="footerBottom">
+			<ul>
+				<li>United States</li>
+				<li>2016 CycleWorld, Inc All Rights Reserved</li>
+				<li>Guides</li>
+				<li>Terms of Use</li>
+				<li>Privacy Policy</li>
+			</ul>
+		</section>
+	</footer>
 	
 </body>
 
