--- a/BikeShop/contact.html
+++ b/BikeShop/contact.html
@@ -23,6 +23,54 @@
 		</h1>
 	</header>
 	
+	<footer>
+		<section id="footerOther">
+			<ul>
+				<li>Gift Cards</li>
+				<li>Find a Store</li>
+				<li>Sign up for Email</li>
+				<li>Become a Member</li>
+			</ul>
+		</section>
+		<section id="getHelp">
+			<ul>
+				<li>Get Help</li>
+				<li>Shipping and Delivery</li>
+				<li>Returns</li>
+				<li>Payment Options</li>
+				<li>Contact Us</li>
+			</ul>
+		</section>
+		<section id="news">
+			<ul>
+				<li>News</li>
+				<li>About Cycleworld</li>
+				<li>Careers</li>
+				<li>Gearup Culture &amp; Careers</li>
+				<li>Investors</li>
+				<li>Substainable Innovation</li>
+				<li>CA Supply Chains Act</li>
+				<li>Contact Us</li>
+			</ul>
+		</section>
+		<section id="social">
+			<ul>
+				<li><a href="https://www.facebook.com/">Facebook</a></li>
+				<li><a href="https://www.twitter.com/">Twitter</a></li>
+				<li><a href="https://www.youtube.com/">YouTube</a></li>
+				<li><a href="https://www.instagram.com/">Instagram</a></li>
+			</ul>
+		</section>
+		<section id="footerBottom">
+			<ul>
+				<li>United States</li>
+				<li>2016 CycleWorld, Inc All Rights Reserved</li>
+				<li>Guides</li>
+				<li>Terms of Use</li>
+				<li>Privacy Policy</li>
+			</ul>
+		</section>
+	</footer>
 </body>
 
 	
