--- a/BikeShop/shop.html
+++ b/BikeShop/shop.html
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href ="club events.html">Club Events</a></li>
+				<li><a href ="clubEvents.html">Club Events</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -22,19 +22,55 @@
 			<img src="images/cycleWorld.png" alt="logo">
 		</h1>
 	</header>
-	
-	<footer>
+	<section id="products">
+		<h2>Products</h2>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+		<article>
+			<img src="images/seat.jpg" alt="bike seat">
+			<img src="images/ratings.png" alt="rating">
+			<h3>Price</h3>
+			<button type="submit">Add to cart</button>
+		</article>
+	</section>
+<footer>
 		<section id="footerOther">
-			<ul>
-				<li>Gift Cards</li>
-				<li>Find a Store</li>
-				<li>Sign up for Email</li>
-				<li>Become a Member</li>
-			</ul>
+				<h4>Gift Cards</h4>
+				<h4>Find a Store</h4>
+				<h4>Sign up for Email</h4>
+				<h4>Become a Member</h4>
 		</section>
 		<section id="getHelp">
+			<h4>Get Help</h4>
 			<ul>
-				<li>Get Help</li>
 				<li>Shipping and Delivery</li>
 				<li>Returns</li>
 				<li>Payment Options</li>
@@ -42,9 +78,9 @@
 			</ul>
 		</section>
 		<section id="news">
+			<h4>News</h4>
+			<h4>About Cycleworld</h4>
 			<ul>
-				<li>News</li>
-				<li>About Cycleworld</li>
 				<li>Careers</li>
 				<li>Gearup Culture &amp; Careers</li>
 				<li>Investors</li>
@@ -54,6 +90,7 @@
 			</ul>
 		</section>
 		<section id="social">
+			<h4>Social</h4>
 			<ul>
 				<li><a href="https://www.facebook.com/">Facebook</a></li>
 				<li><a href="https://www.twitter.com/">Twitter</a></li>
@@ -62,9 +99,9 @@
 			</ul>
 		</section>
 		<section id="footerBottom">
+			<h5>United States</h5>
+			<h5>2016 CycleWorld, Inc All Rights Reserved</h5>
 			<ul>
-				<li>United States</li>
-				<li>2016 CycleWorld, Inc All Rights Reserved</li>
 				<li>Guides</li>
 				<li>Terms of Use</li>
 				<li>Privacy Policy</li>
