--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -13,7 +13,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href ="club events.html">Club Events</a></li>
+				<li><a href ="clubEvents.html">Club Events</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -31,67 +31,67 @@
 	
 	<section id="featured">
 		<h2>Shop</h2>
-		<h2>Featured Products</h2>
+		<h3>Featured Products</h3>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Product</h3>
+			<h4>Product</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Price</p>
 		</article>
 	</section>
 	
 	<section id="memberBenefits">
-		<h3>Cycle Club</h3>
+		<h2>Cycle Club</h2>
 		<h3>Member Benefits</h3>
 		<article>
 			<img src="images/truck.png" alt="truck">
@@ -112,16 +112,14 @@
 	</section>
 	<footer>
 		<section id="footerOther">
-			<ul>
-				<li>Gift Cards</li>
-				<li>Find a Store</li>
-				<li>Sign up for Email</li>
-				<li>Become a Member</li>
-			</ul>
+				<h4>Gift Cards</h4>
+				<h4>Find a Store</h4>
+				<h4>Sign up for Email</h4>
+				<h4>Become a Member</h4>
 		</section>
 		<section id="getHelp">
+			<h4>Get Help</h4>
 			<ul>
-				<li>Get Help</li>
 				<li>Shipping and Delivery</li>
 				<li>Returns</li>
 				<li>Payment Options</li>
@@ -129,9 +127,9 @@
 			</ul>
 		</section>
 		<section id="news">
+			<h4>News</h4>
+			<h4>About Cycleworld</h4>
 			<ul>
-				<li>News</li>
-				<li>About Cycleworld</li>
 				<li>Careers</li>
 				<li>Gearup Culture &amp; Careers</li>
 				<li>Investors</li>
@@ -141,6 +139,7 @@
 			</ul>
 		</section>
 		<section id="social">
+			<h4>Social</h4>
 			<ul>
 				<li><a href="https://www.facebook.com/">Facebook</a></li>
 				<li><a href="https://www.twitter.com/">Twitter</a></li>
@@ -149,9 +148,9 @@
 			</ul>
 		</section>
 		<section id="footerBottom">
+			<h5>United States</h5>
+			<h5>2016 CycleWorld, Inc All Rights Reserved</h5>
 			<ul>
-				<li>United States</li>
-				<li>2016 CycleWorld, Inc All Rights Reserved</li>
 				<li>Guides</li>
 				<li>Terms of Use</li>
 				<li>Privacy Policy</li>
