Feedback and JSON
Changed HTML from feedback and added Javascript to fill HTML with JSON

--- a/BikeShop/clubEvents.html
+++ b/BikeShop/clubEvents.html
@@ -13,54 +13,52 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href ="clubEvents.html">Club Events</a></li>
+				<li><a href="clubEvents.html">Club Events</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>
-			<img src="images/banner.jpg" alt="guy in red on bike">
 			<img src="images/cycleWorld.png" alt="logo">
 		</h1>
 	</header>
-	
+	<section id="events">
 	<h2>Recent Events</h2>
 	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
+		<img src="images/marathon.jpg" alt="marathon">
+		<h3>Lorem ipsum dolor</h3>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
 	</article>
 	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
+		<img src="images/bikesOnRoad.jpg" alt="bikes on road">
+		<h3>Lorem ipsum dolor</h3>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
 	</article>
 	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
+		<img src="images/familyBiking.jpg" alt="family biking">
+		<h3>Lorem ipsum dolor</h3>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
 	</article>
 	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
+		<img src="images/trailBikes.jpg" alt="bike on trail">
+		<h3>Lorem ipsum dolor</h3>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
 	</article>
 	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
+		<img src="images/bikesOnRoad2.jpg" alt="bikes on road">
+		<h3>Lorem ipsum dolor</h3>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
+		<p>Lorem ipsum dolor</p>
 	</article>
-	<article>
-		<img src="images/bikes.jpg" alt="bikes">
-		<h3>Event Name</h3>
-		<p>Date</p>
-		<p>Description</p>
-	</article>
-	
+	</section>
 <footer>
 		<section id="footerOther">
 				<h4>Gift Cards</h4>
