--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -13,12 +13,11 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href ="clubEvents.html">Club Events</a></li>
+				<li><a href="clubEvents.html">Club Events</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>
-			<img src="images/banner.jpg" alt="guy in red on bike">
 			<img src="images/cycleWorld.png" alt="logo">
 		</h1>
 	</header>
@@ -30,83 +29,76 @@
 	</section>
 	
 	<section id="featured">
-		<h2>Shop</h2>
-		<h3>Featured Products</h3>
+		<h2>Shop <br> Featured Products</h2>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
+			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
+			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
-		<article>
-			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
-		</article>
-		<article>
-			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
-			<h4>Product</h4>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
-			<p>Price</p>
-		</article>
+		
 	</section>
 	
 	<section id="memberBenefits">
-		<h2>Cycle Club</h2>
-		<h3>Member Benefits</h3>
+		<h2>Cycle Club <br> Member Benefits</h2>
 		<article>
-			<img src="images/truck.png" alt="truck">
 			<h4>Free Shipping</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
 		</article>
 		<article>
-			<img src="images/wrench.png" alt="wrench">
 			<h4>In-Store Tune Ups</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt</p>
 		</article>
 		<article>
-			<img src="images/envelope.png" alt="envelope">
 			<h4>Newsletter</h4>
-	
+			<p>
+				<label for="email">Your Email</label>
+					<input type="text" name="email" id="email" placeholder="Email Address" />
+			</p>
+			<p>
+				<button type="submit" id="signUp">Sign Up</button>
+			</p>
 		</article>
 		
 	</section>
