--- a/BikeShop/shop.html
+++ b/BikeShop/shop.html
@@ -13,12 +13,11 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="shop.html">Shop</a></li>
-				<li><a href ="clubEvents.html">Club Events</a></li>
+				<li><a href="clubEvents.html">Club Events</a></li>
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>
-			<img src="images/banner.jpg" alt="guy in red on bike">
 			<img src="images/cycleWorld.png" alt="logo">
 		</h1>
 	</header>
@@ -27,37 +26,55 @@
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
 			<img src="images/ratings.png" alt="rating">
-			<h3>Price</h3>
+			<h4>Lorem ipsum dolor</h4>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
+			<p>Lorem ipsum dolor</p>
+			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
 	</section>
