--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -5,7 +5,7 @@
 	<title>Home</title>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="css/main.css">
-	<script src="js/content.js"></script>
+	
 </head>
 <body>
 	<header>
@@ -60,6 +60,7 @@
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
+			<button type="submit">Add to cart</button>
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
@@ -152,5 +153,5 @@
 	
 </body>
 
-	
+<script src="js/content.js"></script>	
 </html>
