--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -11,10 +11,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><button><a href="index.html">Home</a></button></li>
-				<li><button><a href="shop.html">Shop</a></button></li>
-				<li><button><a href="clubEvents.html">Club Events</a></button></li>
-				<li><button><a href="contact.html">Contact</a></button></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
+				<li><a href="clubEvents.html">Club Events</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>
@@ -23,9 +23,18 @@
 	</header>
 		
 	<section id="homeNav">
-		<h2>Bikes <img src="images/bikes.jpg" alt="BW bike"></h2>
-		<h2>Accessories<img src="images/speedometer.jpg" alt="speedometer"></h2>
-		<h2>Apparel<img src="images/backpack.jpg" alt="backpack"></h2>
+		<article>
+		 <img src="images/bikes.jpg" alt="BW bike">
+		<h2>Bikes</h2>
+		</article>
+		<article>
+		<img src="images/speedometer.jpg" alt="speedometer">
+		<h2>Accessories</h2>
+		</article>
+		<article>
+		<img src="images/backpack.jpg" alt="backpack">
+		<h2>Apparel</h2>
+		</article>
 	</section>
 	
 	<section id="featured">
