--- a/BikeShop/shop.html
+++ b/BikeShop/shop.html
@@ -11,10 +11,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><button><a href="index.html">Home</a></button></li>
-				<li><button><a href="shop.html">Shop</a></button></li>
-				<li><button><a href="clubEvents.html">Club Events</a></button></li>
-				<li><button><a href="contact.html">Contact</a></button></li>
+				<li><a href="index.html">Home</a></li>
+				<li><a href="shop.html">Shop</a></li>
+				<li><a href="clubEvents.html">Club Events</a></li>
+				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
 		<h1>
