--- a/BikeShop/shop.html
+++ b/BikeShop/shop.html
@@ -77,6 +77,7 @@
 			<h3>Lorem ipsum dolor</h3>
 			<button type="submit">Add to cart</button>
 		</article>
+		<button id="next">Next Page</button>
 	</section>
 <footer>
 		<section id="footerOther">
