--- a/BikeShop/contact.html
+++ b/BikeShop/contact.html
@@ -41,7 +41,7 @@
 				<textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
 		</p>
 		<p>
-				<button type="submit" id="submit">Send Message</button>
+				<button type="button" id="submit">Send Message</button>
 		</p>
 	</form>
 		</section>
